--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,12 @@ jobs:
           
       - name: Docker build and push
         uses: docker/build-push-action@v2.7.0
-        with:
-          context: ./src
-          file: ./src/Dockerfile
+        with:        
+          #context: ./src
+          #file: ./src/Dockerfile
+          context: ConversaoPeso.Web
+          file: ConversaoPeso.Web/Dockerfile
+          
           push: true
           tags: |
             anselmojr/conversao-peso:latest
