--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,11 +21,9 @@ jobs:
           
       - name: Docker build and push
         uses: docker/build-push-action@v2.7.0
-        with:        
-          #context: ./src
-          #file: ./src/Dockerfile
-          context: ./ConversaoPeso.Web
-          file: ./ConversaoPeso.Web/Dockerfile
+        with:
+          context: .
+          file: ./Dockerfile
           
           push: true
           tags: |
